--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1345</width>
+    <width>1376</width>
     <height>627</height>
    </rect>
   </property>
@@ -21,6 +21,12 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout_38">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
     <item>
      <widget class="QWidget" name="widget_devices" native="true">
       <property name="minimumSize">
@@ -169,7 +175,7 @@
             <normaloff>:/切图-首页/文件夹1.png</normaloff>:/切图-首页/文件夹1.png</iconset>
           </property>
           <property name="flags">
-           <set>ItemIsDragEnabled|ItemIsDropEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+           <set>ItemIsUserCheckable|ItemIsEnabled</set>
           </property>
          </item>
          <item>
@@ -181,7 +187,7 @@
             <normaloff>:/切图-首页/文件夹1.png</normaloff>:/切图-首页/文件夹1.png</iconset>
           </property>
           <property name="flags">
-           <set>ItemIsDragEnabled|ItemIsDropEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+           <set>ItemIsUserCheckable|ItemIsEnabled</set>
           </property>
          </item>
         </widget>
@@ -482,6 +488,12 @@
          <property name="spacing">
           <number>0</number>
          </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
          <item>
           <widget class="QPushButton" name="pushButton_magnify">
            <property name="sizePolicy">
@@ -489,6 +501,12 @@
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>30</height>
+            </size>
            </property>
            <property name="text">
             <string>扩大</string>
@@ -520,6 +538,12 @@
          </item>
          <item>
           <widget class="QPushButton" name="pushButton_shrink">
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>30</height>
+            </size>
+           </property>
            <property name="text">
             <string>缩小</string>
            </property>
@@ -549,9 +573,15 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_center">
+          <widget class="QPushButton" name="pushButton_perfect">
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>30</height>
+            </size>
+           </property>
            <property name="text">
-            <string>扩大</string>
+            <string>适应</string>
            </property>
            <property name="icon">
             <iconset resource="resource.qrc">
@@ -580,6 +610,12 @@
          </item>
          <item>
           <widget class="QPushButton" name="pushButton_take">
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>30</height>
+            </size>
+           </property>
            <property name="text">
             <string>抓拍</string>
            </property>
@@ -591,19 +627,58 @@
          </item>
          <item>
           <widget class="QPushButton" name="pushButton_playOrStop">
-           <property name="maximumSize">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
             <size>
-             <width>30</width>
-             <height>30</height>
+             <width>0</width>
+             <height>44</height>
             </size>
            </property>
+           <property name="maximumSize">
+            <size>
+             <width>44</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="styleSheet">
+            <string notr="true"/>
+           </property>
            <property name="text">
-            <string>&gt;</string>
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset>
+             <activeoff>:/切图-首页/暂停.png</activeoff>
+             <activeon>:/切图-首页/播放.png</activeon>
+            </iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>44</width>
+             <height>44</height>
+            </size>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="checked">
+            <bool>false</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="pushButton_record">
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>30</height>
+            </size>
+           </property>
            <property name="text">
             <string>录像</string>
            </property>
@@ -634,6 +709,12 @@
          </item>
          <item>
           <widget class="QPushButton" name="pushButton_exposure">
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>30</height>
+            </size>
+           </property>
            <property name="text">
             <string>曝光</string>
            </property>
@@ -664,6 +745,12 @@
          </item>
          <item>
           <widget class="QPushButton" name="pushButton_whiteBalance">
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>30</height>
+            </size>
+           </property>
            <property name="text">
             <string>白平衡</string>
            </property>
@@ -694,6 +781,12 @@
          </item>
          <item>
           <widget class="QPushButton" name="pushButton_layout">
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>30</height>
+            </size>
+           </property>
            <property name="text">
             <string>布局</string>
            </property>
@@ -713,39 +806,6 @@
           <number>6</number>
          </property>
          <item>
-          <layout class="QVBoxLayout" name="verticalLayout_6">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-           <item>
-            <widget class="QLabel" name="label_21">
-             <property name="maximumSize">
-              <size>
-               <width>16777215</width>
-               <height>25</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>采集（FPS）</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="label_22">
-             <property name="maximumSize">
-              <size>
-               <width>16777215</width>
-               <height>25</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>50</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item>
           <layout class="QVBoxLayout" name="verticalLayout_4">
            <property name="spacing">
             <number>0</number>
@@ -764,7 +824,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_13">
+            <widget class="QLabel" name="label_resolution">
              <property name="maximumSize">
               <size>
                <width>16777215</width>
@@ -772,40 +832,7 @@
               </size>
              </property>
              <property name="text">
-              <string>1280X960</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item>
-          <layout class="QVBoxLayout" name="verticalLayout_8">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-           <item>
-            <widget class="QLabel" name="label_25">
-             <property name="maximumSize">
-              <size>
-               <width>16777215</width>
-               <height>25</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>Frames</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="label_26">
-             <property name="maximumSize">
-              <size>
-               <width>16777215</width>
-               <height>25</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>12334</string>
+              <string>?x?</string>
              </property>
             </widget>
            </item>
@@ -830,7 +857,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_24">
+            <widget class="QLabel" name="label_scale">
              <property name="maximumSize">
               <size>
                <width>16777215</width>
@@ -838,7 +865,40 @@
               </size>
              </property>
              <property name="text">
-              <string>60.87%</string>
+              <string>?%</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_8">
+           <property name="spacing">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QLabel" name="label_25">
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>25</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>帧数</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_frames">
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>25</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>?</string>
              </property>
             </widget>
            </item>
@@ -863,7 +923,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_20">
+            <widget class="QLabel" name="label_displayFPS">
              <property name="maximumSize">
               <size>
                <width>16777215</width>
@@ -871,7 +931,40 @@
               </size>
              </property>
              <property name="text">
-              <string>39.0</string>
+              <string>?</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_6">
+           <property name="spacing">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QLabel" name="label_21">
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>25</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>采集（FPS）</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_recordFPS">
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>25</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>?</string>
              </property>
             </widget>
            </item>
@@ -896,7 +989,7 @@
             <number>0</number>
            </property>
            <item>
-            <widget class="QPushButton" name="pushButton_cameras">
+            <widget class="QPushButton" name="pushButton_allCameras">
              <property name="maximumSize">
               <size>
                <width>70</width>
@@ -998,10 +1091,6 @@
             </property>
             <property name="text">
              <string/>
-            </property>
-            <property name="icon">
-             <iconset resource="resource.qrc">
-              <normaloff>:/切图-首页/缩进.png</normaloff>:/切图-首页/缩进.png</iconset>
             </property>
            </widget>
           </item>
@@ -1113,7 +1202,7 @@ QTabBar::tab:selected, QTabBar::tab:hover {
                 <x>0</x>
                 <y>0</y>
                 <width>325</width>
-                <height>551</height>
+                <height>557</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_18">
@@ -1138,6 +1227,9 @@ QTabBar::tab:selected, QTabBar::tab:hover {
                   <number>6</number>
                  </property>
                  <property name="leftMargin">
+                  <number>6</number>
+                 </property>
+                 <property name="topMargin">
                   <number>6</number>
                  </property>
                  <item>
@@ -1397,7 +1489,7 @@ QTabBar::tab:selected, QTabBar::tab:hover {
                 <x>0</x>
                 <y>0</y>
                 <width>325</width>
-                <height>551</height>
+                <height>557</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_17">
@@ -1422,6 +1514,9 @@ QTabBar::tab:selected, QTabBar::tab:hover {
                   <number>0</number>
                  </property>
                  <property name="leftMargin">
+                  <number>6</number>
+                 </property>
+                 <property name="topMargin">
                   <number>6</number>
                  </property>
                  <item>
@@ -1699,7 +1794,7 @@ QTabBar::tab:selected, QTabBar::tab:hover {
                 <x>0</x>
                 <y>0</y>
                 <width>325</width>
-                <height>551</height>
+                <height>557</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_12">
@@ -2062,7 +2157,7 @@ QTabBar::tab:selected, QTabBar::tab:hover {
                 <x>0</x>
                 <y>0</y>
                 <width>325</width>
-                <height>551</height>
+                <height>557</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_15">
@@ -2310,7 +2405,7 @@ QTabBar::tab:selected, QTabBar::tab:hover {
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1345</width>
+     <width>1376</width>
      <height>29</height>
     </rect>
    </property>
