--- a/mainmenu.ui
+++ b/mainmenu.ui
@@ -79,7 +79,7 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>240</width>
+          <width>266</width>
           <height>50</height>
          </size>
         </property>
@@ -359,6 +359,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButton_minimum">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -370,6 +373,9 @@
          <width>30</width>
          <height>30</height>
         </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
        </property>
        <property name="text">
         <string/>
@@ -378,6 +384,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButton_maximum">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -389,6 +398,9 @@
          <width>30</width>
          <height>30</height>
         </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
        </property>
        <property name="text">
         <string/>
@@ -397,6 +409,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButton_close">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -408,6 +423,9 @@
          <width>30</width>
          <height>30</height>
         </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
        </property>
        <property name="text">
         <string/>
