--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -438,7 +438,7 @@ QTabBar::tab:selected, QTabBar::tab:hover {
 </string>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <property name="usesScrollButtons">
          <bool>true</bool>
@@ -1048,7 +1048,7 @@ QTabBar::tab:selected, QTabBar::tab:hover {
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <property name="elideMode">
           <enum>Qt::ElideLeft</enum>
@@ -1395,8 +1395,8 @@ QTabBar::tab:selected, QTabBar::tab:hover {
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>380</width>
-                <height>555</height>
+                <width>200</width>
+                <height>354</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_17">
@@ -1700,8 +1700,8 @@ QTabBar::tab:selected, QTabBar::tab:hover {
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>380</width>
-                <height>555</height>
+                <width>254</width>
+                <height>549</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_12">
@@ -2063,8 +2063,8 @@ QTabBar::tab:selected, QTabBar::tab:hover {
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>380</width>
-                <height>555</height>
+                <width>181</width>
+                <height>381</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_15">
@@ -2334,7 +2334,10 @@ QTabBar::tab:selected, QTabBar::tab:hover {
   </widget>
   <action name="action_open">
    <property name="text">
-    <string>打开相机</string>
+    <string>打开/关闭</string>
+   </property>
+   <property name="toolTip">
+    <string>打开/关闭</string>
    </property>
   </action>
   <action name="action_modifyIp">
