--- a/toplevelitemwidget.ui
+++ b/toplevelitemwidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DeviceTreeWidgetItem</class>
- <widget class="QWidget" name="DeviceTreeWidgetItem">
+ <class>TopLevelItemWidget</class>
+ <widget class="QWidget" name="TopLevelItemWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
