--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -126,12 +126,6 @@
          <property name="frameShadow">
           <enum>QFrame::Sunken</enum>
          </property>
-         <property name="horizontalScrollBarPolicy">
-          <enum>Qt::ScrollBarAsNeeded</enum>
-         </property>
-         <property name="sizeAdjustPolicy">
-          <enum>QAbstractScrollArea::AdjustIgnored</enum>
-         </property>
          <property name="headerHidden">
           <bool>true</bool>
          </property>
@@ -180,7 +174,7 @@
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
-         <widget class="QWidget" name="scrollAreaWidgetContents">
+         <widget class="QWidget" name="layout_leftSideCameraInfo">
           <property name="geometry">
            <rect>
             <x>0</x>
@@ -388,9 +382,6 @@
       </property>
       <item>
        <widget class="QTabWidget" name="tabWidget_preview">
-        <property name="styleSheet">
-         <string notr="true"/>
-        </property>
         <property name="currentIndex">
          <number>0</number>
         </property>
@@ -988,25 +979,7 @@
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>1</number>
-         </property>
-         <property name="elideMode">
-          <enum>Qt::ElideLeft</enum>
-         </property>
-         <property name="usesScrollButtons">
-          <bool>true</bool>
-         </property>
-         <property name="documentMode">
-          <bool>false</bool>
-         </property>
-         <property name="tabsClosable">
-          <bool>false</bool>
-         </property>
-         <property name="movable">
-          <bool>false</bool>
-         </property>
-         <property name="tabBarAutoHide">
-          <bool>false</bool>
+          <number>2</number>
          </property>
          <widget class="QWidget" name="tab_3">
           <attribute name="icon">
@@ -1040,7 +1013,7 @@
              <property name="widgetResizable">
               <bool>true</bool>
              </property>
-             <widget class="QWidget" name="scrollAreaWidgetContents_3">
+             <widget class="QWidget" name="layout_rightSideTab0">
               <property name="geometry">
                <rect>
                 <x>0</x>
@@ -1439,7 +1412,7 @@
              <property name="widgetResizable">
               <bool>true</bool>
              </property>
-             <widget class="QWidget" name="scrollAreaWidgetContents_6">
+             <widget class="QWidget" name="layout_rightSideTab1">
               <property name="geometry">
                <rect>
                 <x>0</x>
@@ -1557,7 +1530,7 @@
              <property name="widgetResizable">
               <bool>true</bool>
              </property>
-             <widget class="QWidget" name="scrollAreaWidgetContents_5">
+             <widget class="QWidget" name="layout_rightSideTab2">
               <property name="geometry">
                <rect>
                 <x>0</x>
@@ -1745,4 +1718,7 @@
   <include location="resource.qrc"/>
  </resources>
  <connections/>
+ <slots>
+  <signal>cameraParamsUpdate()</signal>
+ </slots>
 </ui>
