--- a/resource.qrc
+++ b/resource.qrc
@@ -12,6 +12,7 @@
         <file>切图-首页/多种语言.png</file>
         <file>切图-首页/导入.png</file>
         <file>切图-首页/导出.png</file>
+        <file>切图-首页/小箭头.png</file>
         <file>切图-首页/展开.png</file>
         <file>切图-首页/属性树.png</file>
         <file>切图-首页/左边底.png</file>
@@ -23,13 +24,19 @@
         <file>切图-首页/批量采集.png</file>
         <file>切图-首页/抓拍.png</file>
         <file>切图-首页/搜索.png</file>
+        <file>切图-首页/播放.png</file>
         <file>切图-首页/文件夹1.png</file>
+        <file>切图-首页/暂停.png</file>
         <file>切图-首页/曝光.png</file>
         <file>切图-首页/最大化.png</file>
         <file>切图-首页/最小化.png</file>
         <file>切图-首页/白平衡.png</file>
+        <file>切图-首页/相机.png</file>
         <file>切图-首页/相机拷贝2.png</file>
+        <file>切图-首页/箭头拷贝2.png</file>
+        <file>切图-首页/红.png</file>
         <file>切图-首页/红色.png</file>
+        <file>切图-首页/绿.png</file>
         <file>切图-首页/绿色.png</file>
         <file>切图-首页/缩小.png</file>
         <file>切图-首页/缩进.png</file>
@@ -38,12 +45,50 @@
         <file>切图-首页/链接.png</file>
         <file>切图-首页/页面变小.png</file>
         <file>切图-首页/顶部.png</file>
-        <file>切图-首页/小箭头.png</file>
-        <file>切图-首页/播放.png</file>
-        <file>切图-首页/暂停.png</file>
-        <file>切图-首页/相机.png</file>
-        <file>切图-首页/箭头拷贝2.png</file>
-        <file>切图-首页/红.png</file>
-        <file>切图-首页/绿.png</file>
+        <file>theme/icon/LOGO.png</file>
+        <file>theme/icon/下底.png</file>
+        <file>theme/icon/下拉.png</file>
+        <file>theme/icon/产品图.png</file>
+        <file>theme/icon/关闭.png</file>
+        <file>theme/icon/刷新.png</file>
+        <file>theme/icon/单个采集.png</file>
+        <file>theme/icon/右边底.png</file>
+        <file>theme/icon/图像处理.png</file>
+        <file>theme/icon/多种语言.png</file>
+        <file>theme/icon/导入.png</file>
+        <file>theme/icon/导出.png</file>
+        <file>theme/icon/小箭头.png</file>
+        <file>theme/icon/展开.png</file>
+        <file>theme/icon/属性树.png</file>
+        <file>theme/icon/左边底.png</file>
+        <file>theme/icon/布局.png</file>
+        <file>theme/icon/常用属性.png</file>
+        <file>theme/icon/camera.png</file>
+        <file>theme/icon/扩大.png</file>
+        <file>theme/icon/批量暂停.png</file>
+        <file>theme/icon/批量采集.png</file>
+        <file>theme/icon/抓拍.png</file>
+        <file>theme/icon/搜索.png</file>
+        <file>theme/icon/播放.png</file>
+        <file>theme/icon/文件夹1.png</file>
+        <file>theme/icon/暂停.png</file>
+        <file>theme/icon/曝光.png</file>
+        <file>theme/icon/最大化.png</file>
+        <file>theme/icon/最小化.png</file>
+        <file>theme/icon/白平衡.png</file>
+        <file>theme/icon/相机.png</file>
+        <file>theme/icon/相机拷贝2.png</file>
+        <file>theme/icon/箭头拷贝2.png</file>
+        <file>theme/icon/stopped.png</file>
+        <file>theme/icon/红色.png</file>
+        <file>theme/icon/playing.png</file>
+        <file>theme/icon/绿色.png</file>
+        <file>theme/icon/缩小.png</file>
+        <file>theme/icon/缩进.png</file>
+        <file>theme/icon/触发控制.png</file>
+        <file>theme/icon/返回.png</file>
+        <file>theme/icon/链接.png</file>
+        <file>theme/icon/页面变小.png</file>
+        <file>theme/icon/顶部.png</file>
     </qresource>
 </RCC>
